--- a/resources/CMakeLists.txt
+++ b/resources/CMakeLists.txt
@@ -1,1 +1,8 @@
 ﻿#configure_file ("Wall.png" ${CMAKE_BINARY_DIR} COPYONLY)
+configure_file ("wall.png" ${CMAKE_BINARY_DIR} COPYONLY)
+configure_file ("door.png" ${CMAKE_BINARY_DIR} COPYONLY)
+configure_file ("guard.png" ${CMAKE_BINARY_DIR} COPYONLY)
+configure_file ("robot.png" ${CMAKE_BINARY_DIR} COPYONLY)
+configure_file ("stone.png" ${CMAKE_BINARY_DIR} COPYONLY)
+configure_file ("delete.png" ${CMAKE_BINARY_DIR} COPYONLY)
+configure_file ("toolbar.txt" ${CMAKE_BINARY_DIR} COPYONLY)
