--- a/resources/CMakeLists.txt
+++ b/resources/CMakeLists.txt
@@ -5,4 +5,6 @@ configure_file ("guard.png" ${CMAKE_BINARY_DIR} COPYONLY)
 configure_file ("robot.png" ${CMAKE_BINARY_DIR} COPYONLY)
 configure_file ("stone.png" ${CMAKE_BINARY_DIR} COPYONLY)
 configure_file ("delete.png" ${CMAKE_BINARY_DIR} COPYONLY)
+configure_file ("background.png" ${CMAKE_BINARY_DIR} COPYONLY)
 configure_file ("toolbar.txt" ${CMAKE_BINARY_DIR} COPYONLY)
+configure_file ("Board.txt" ${CMAKE_BINARY_DIR} COPYONLY)
