--- a/resources/CMakeLists.txt
+++ b/resources/CMakeLists.txt
@@ -6,5 +6,6 @@ configure_file ("robot.png" ${CMAKE_BINARY_DIR} COPYONLY)
 configure_file ("stone.png" ${CMAKE_BINARY_DIR} COPYONLY)
 configure_file ("delete.png" ${CMAKE_BINARY_DIR} COPYONLY)
 configure_file ("background.png" ${CMAKE_BINARY_DIR} COPYONLY)
+configure_file ("save.png" ${CMAKE_BINARY_DIR} COPYONLY)
 configure_file ("toolbar.txt" ${CMAKE_BINARY_DIR} COPYONLY)
 configure_file ("Board.txt" ${CMAKE_BINARY_DIR} COPYONLY)
