--- a/resources/CMakeLists.txt
+++ b/resources/CMakeLists.txt
@@ -9,3 +9,4 @@ configure_file ("background.png" ${CMAKE_BINARY_DIR} COPYONLY)
 configure_file ("save.png" ${CMAKE_BINARY_DIR} COPYONLY)
 configure_file ("toolbar.txt" ${CMAKE_BINARY_DIR} COPYONLY)
 configure_file ("Board.txt" ${CMAKE_BINARY_DIR} COPYONLY)
+configure_file ("font.ttf" ${CMAKE_BINARY_DIR} COPYONLY)
